--- a/PortfolioWebsite/Pages/About.razor.css
+++ b/PortfolioWebsite/Pages/About.razor.css
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    justify-self: center;
+    margin: 0 auto;
     padding: 1rem;
 }
 
@@ -102,12 +104,11 @@
 
 .skills-container {
     width: 100%;
-    height: 250px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    min-height: 250px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;
+    justify-items: center;
     position: relative;
     margin: 0 auto 5rem auto;
     transform-style: preserve-3d;
