--- a/PortfolioWebsite/Pages/Contact.razor.css
+++ b/PortfolioWebsite/Pages/Contact.razor.css
@@ -49,7 +49,7 @@
         bottom: -0.6rem;
     }
 
-form {
+.contact-form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
